# enterprise-policy-rag-benchmark

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark_results/: README.md
benchmark_results/comparison/: fair-vector-comparison.json  fair-vector-comparison.md
benchmark_results/end-to-end/: azure_ai_search.csv  azure_ai_search.json  comparison.json  comparison.md  pgvector.csv  pgvector.json  pgvector.md  qdrant.csv  qdrant.json
benchmark_results/enterprise-controls/: azure_ai_search.csv  azure_ai_search.json  azure_ai_search.md  comparison.json  comparison.md  pgvector.csv  pgvector.json  qdrant.csv  qdrant.json
benchmark_results/platform-optimized/comparison/: platform-comparison.json  platform-comparison.md
benchmark_results/platform-optimized/raw/: azure_ai_search.csv  azure_ai_search.json  azure_ai_search.md  pgvector.csv  pgvector.json  pgvector.md  qdrant.csv  qdrant.json  qdrant.md
benchmark_results/raw/: azure_ai_search.csv  azure_ai_search.json  azure_ai_search.md  pgvector.csv  pgvector.json  pgvector.md  qdrant.csv  qdrant.json  qdrant.md
data/evaluation/: end-to-end-v1.json  enterprise-controls-v1.json  fair-vector-v1.json
docs/: DECISIONS.md  ERROR_LOG.md  NEXT_STEPS.md  PROGRESS.md  PROJECT_CONTEXT.md  PROJECT_SCOPE.md  SECURITY.md
infrastructure/bootstrap/: main.tf  outputs.tf  variables.tf
infrastructure/environments/dev/: .terraform.lock.hcl  container_apps.tf  container_registry.tf  foundry.tf  identity_apps.tf  ingestion_jobs.tf  key_vault.tf  locals.tf  main.tf  models.tf  monitoring.tf  network.tf  outputs.tf  postgresql.tf  private_endpoints.tf  providers.tf  qdrant.tf  rbac.tf  search.tf  static_web_app.tf  variables.tf  versions.tf
scripts/: bootstrap_postgres_roles.py  build_web_from_terraform.sh  compare_answer_runs.py  compare_fair_runs.py  decode_enterprise_run_logs.py  decode_fair_run_logs.py  generate_fair_artifact.py  ingest_corpus.py  ingest_fair_artifact.py  publish_benchmark_artifacts.sh  run_enterprise_evaluation.py  run_fair_benchmark.py  smoke_test_azure_search_index.py  smoke_test_azure_search_ingestion.py  smoke_test_azure_search_retrieval.py  smoke_test_backend.py  smoke_test_foundry_answers.py  smoke_test_foundry_embeddings.py  smoke_test_local_backends.py  validate_benchmark_artifacts.py
src/policy_rag/: auth.py  config.py  monitoring.py  runtime.py
src/policy_rag/answering/: __init__.py  foundry.py  models.py  (+2 more)
tests/unit/: test_auth.py  test_monitoring.py  test_package.py
web/: .env.example  Dockerfile  app.js  index.html  nginx.conf  package-lock.json  package.json  styles.css
web/src/: benchmark.js  benchmark.test.js  main.js
(+101 files in other folders)
