[project]
name = "enterprise-policy-rag-benchmark"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "azure-identity>=1.25.3,<2.0",
    "azure-search-documents>=12.0.0,<13.0",
    "llama-index-core>=0.14.23,<0.15",
    "pydantic>=2.13.4,<3.0",
    "tiktoken>=0.13.0,<1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[tool.uv]
prerelease = "disallow"

[tool.uv.build-backend]
module-name = "policy_rag"

