[project]
name = "enterprise-policy-rag-benchmark"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "azure-identity>=1.25.3,<2.0",
    # Microsoft's stable Azure Monitor distro requires these two preview-labelled bridges.
    # They are pinned explicitly; arbitrary prereleases remain disallowed by uv policy below.
    "azure-core-tracing-opentelemetry==1.0.0b13",
    "azure-monitor-opentelemetry==1.8.9",
    "azure-monitor-opentelemetry-exporter==1.0.0b55",
    "azure-search-documents>=12.0.0,<13.0",
    "fastapi>=0.116,<1.0",
    "llama-index-core>=0.14.23,<0.15",
    "pgvector>=0.4,<1.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "pydantic>=2.13.4,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "pyjwt[crypto]>=2.10,<3.0",
    "qdrant-client>=1.15,<2.0",
    "tiktoken>=0.13.0,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=6.2,<8.0",
    "ruff>=0.15.22",
]
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.uv.build-backend]
module-name = "policy_rag"
